# dslgen

./: README.md  pyproject.toml
src/dslgen/: __init__.py  demo_polars_lark.py
tests/: test_demo_polars_lark.py
